sf-metadata/force-app/main/default/objects/Stripe_Quote_Event__c/Stripe_Quote_Event__c.object-meta.xml
<CustomObject>
    <label>Stripe Quote Event</label>
    <nameField>
        <displayFormat>SQE-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Quote Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>