sf-metadata/force-app/main/default/objects/Stripe_Quote_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>