sf-metadata/force-app/main/default/objects/Stripe_Quote_Event__c/fields/Omni_Audit_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Omni_Audit_Log_ID__c</fullName>
    <label>Omni Audit Log ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>