sf-metadata/force-app/main/default/objects/Stripe_Quote_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>omnibridge</fullName><default>true</default><label>OmniBridge</label></value>
            <value><fullName>stripe</fullName><default>false</default><label>Stripe Webhook</label></value>
            <value><fullName>pandadoc</fullName><default>false</default><label>PandaDoc Webhook</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>