sf-metadata/force-app/main/default/objects/Stripe_Quote_Event__c/fields/Stripe_Quote__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Quote__c</fullName>
    <label>Stripe Quote</label>
    <referenceTo>Stripe_Quote__c</referenceTo>
    <relationshipLabel>Quote Events</relationshipLabel>
    <relationshipName>Quote_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>